# starplat-mlir

./: .gitignore  CMakeLists.txt  main.cc  nomain.ccignore  run.sh  run_par.sh  run_seq.sh  starplat-opt.cc  test.mlir
ast/: ast.cpp  ast.h  visitor.h
codegen/: astdump.cpp  astdump.h  starplatIR.cpp  starplatIR.h
parser/: avial.l  avial.y
starplatDialect/: Starplat.td
starplatDialect/lowerings/: base2omp.h  forallreduction.h  scfparallel2for.h  starplat2base.cpp  starplat2base.h  starplat2llvmconversions.h  starplat2omp.h  typeconverter.h
starplatDialect/transforms/: reachingDef.h
testing/: a.out  bd.mlir  buildup.avl  coarseGrainedBST.ml  debug_test  debug_test.cpp  graph.hpp  llvm_bd.ll  lowered_bd.mlir  out.ll  test_graph.txt  test_graph_1.txt  test_pr
tests/: bc.avl  buildup.avl  pr.avl  sssp.avl
